removed useless things